--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <html>
-      <img src="https://www.submit.ne.jp/hubfs/shutto%E7%BF%BB%E8%A8%B3.svg" width="160" height="32" loading="lazy">
+      <img src="./hubfs/shutto%E7%BF%BB%E8%A8%B3.svg" width="160" height="32" loading="lazy">
 </html>
